# fleet-router

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  example.config.json
.agents/rules/: fish-shell.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cargo-build.yml  ci.yml  release.yml
client/: client.js  client.ts  package-lock.json  package.json
docker/: Dockerfile  Dockerfile.bootstrap  Dockerfile.loadgen  bootstrap.sh  docker-compose.test.yml  fleet-router.json  genesis.json  load-generator.ts  package.json
mock-ship/: Cargo.toml
mock-ship/scripts/: extract_ship_abi.py
mock-ship/src/: abi.rs  lib.rs  protocol.rs  server.rs  ship_abi.json
scripts/: run-integration-tests.sh
src/: config.json5  config_sample.rs  connection_handler.rs  errors.rs  functions.rs  health.rs  main.rs  models.rs  tasks.rs  zcd.rs
tests/: e2e_proxy.rs  mock_integration.rs  operational.rs  ship_conformance.rs  stress_test.rs
