[workspace]
members = [".", "mock-ship"]

[package]
name = "fleet-router"
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
description = "Reverse proxy and load balancer for the Antelope SHiP (State History Plugin) WebSocket protocol."
authors = ["Igor Lins e Silva", "EOS Rio"]
repository = "https://github.com/eosrio/fleet-router"
homepage = "https://github.com/eosrio/fleet-router"
documentation = "https://github.com/eosrio/fleet-router#readme"
readme = "README.md"
license = "MIT"
categories = ["network-programming"]
keywords = ["antelope", "ship", "state-history", "load-balancer", "websockets"]
# Keep the published crate lean: ship only what's needed to build and run the
# binary. Tests, Docker assets, the TypeScript client, and CI config stay in git.
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "example.config.json",
]

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive", "string", "wrap_help", "unicode"] }
color-print = "0.3.5"
futures = { version = "0.3.30", features = ["compat"] }
rs_abieos = { version = "0.5.0", default-features = false, features = ["rust-backend"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
mock-ship = { path = "mock-ship" }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
serde_json = "1"
